Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "countries[6] = 'usa'# add code here"
+    "countries['new '] = 'usa'# add code here"
    ]
   },
   {
