Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "countries['new mexico'] = 'usa'# add code here"
+    "countries = # add code here"
    ]
   },
   {
